# bleur-templates

./: flake.nix  shell.nix
c-gtk/: default.nix  flake.nix  shell.nix
flutter/: flake.nix  shell.nix
rust/: flake.nix
rust-actix/: default.nix  flake.nix  module.nix  shell.nix
rust-book/: default.nix  flake.nix  shell.nix
rust-nightly/: default.nix
rust-relm4/: .gitignore  Cargo.toml  README.md  bleur.toml  default.nix  flake.nix  justfile  meson.build  meson_options.txt  shell.nix
rust-relm4-minimal/: default.nix  flake.nix  shell.nix
rust-relm4/.github/workflows/: test.yml
rust-relm4/build-aux/: #application-id#.Devel.json
rust-relm4/data/: #application-id#.desktop.in.in  #application-id#.gschema.xml.in  #application-id#.metainfo.xml.in.in
rust-relm4/data/resources/: resources.gresource.xml
rust-relm4/po/: POTFILES.in
rust-relm4/src/: app.rs  main.rs  meson.build
rust-relm4/src/modals/: about.rs
rust-shared/: default.nix  flake.nix  shell.nix
rust-telegram/: default.nix  flake.nix  module.nix  shell.nix
rust-vulkan/: Cargo.toml  default.nix  flake.nix  readme.md  shell.nix
rust-vulkan/src/: main.rs
ts-react/: bleur.toml  default.nix  flake.nix  shell.nix  vite.config.ts
ts-vue/: flake.nix  shell.nix
