[package]
name = "rust-vulkan"
version = "0.0.1"
edition = "2024"
license = "MIT"
homepage = "#website#"
repository = "#repository#"
description = "#description#"
authors = ["#author#"]

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.35.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"
